--- a/PayOffice.DAL/PayOffice.DAL.csproj
+++ b/PayOffice.DAL/PayOffice.DAL.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Configrations\" />
+    <Folder Include="Databases\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
