Added Repository and IRepository

--- a/PayOffice.DAL/PayOffice.DAL.csproj
+++ b/PayOffice.DAL/PayOffice.DAL.csproj
@@ -7,9 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="IRepositories\" />
     <Folder Include="Contexts\" />
-    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PayOffice.Domain\PayOffice.Domain.csproj" />
   </ItemGroup>
 
 </Project>
