--- a/PayOffice.DAL/PayOffice.DAL.csproj
+++ b/PayOffice.DAL/PayOffice.DAL.csproj
@@ -3,12 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Contexts\" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PayOffice.Domain\PayOffice.Domain.csproj" />
