Added some classes

--- a/PayOffice.Service/PayOffice.Service.csproj
+++ b/PayOffice.Service/PayOffice.Service.csproj
@@ -6,4 +6,11 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Mappers\" />
+    <Folder Include="Extensions\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
